kubernetes-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bestcloudforme
spec:
  selector:
    matchLabels:
      app: bestcloudforme
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0

  template:
    metadata:
      labels:
        app: bestcloudforme
    spec:
      containers:
      - name: bestcloudforme
        image: erdates/bestcloudforme
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
