kubernetes-service.yml
apiVersion: v1
kind: Service
metadata:
  name: bestcloudforme
  labels:
    app: bestcloudforme
spec:
  selector:
    app: bestcloudforme
  type: LoadBalancer
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30000
