kubertenes-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bestcloudforme
  namespace: default
spec:
  rules:
  - host: bestcloudforme.com
    http:
      paths:
      - backend:
          service:
            name: bestcloudforme
            port:
              number: 8080
        path: /
        pathType: ImplementationSpecific
